--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prasad's Portfolio</title>
     <link rel="stylesheet" href="styles.css"> <!-- Ensure this points to your CSS file -->
-    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.12/build/spline-viewer.js" async></script>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.21/build/spline-viewer.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
@@ -31,8 +31,8 @@
     <!-- Home Section -->
     <section id="home" class="home-section">
         <div class="spline-container">
-            <spline-viewer loading-anim-type="spinner-small-dark"
-                url="https://prod.spline.design/lHGbEzjimbLiSd9S/scene.splinecode"></spline-viewer>
+            <spline-viewer url="https://prod.spline.design/WE17cvfLbrqrM9kA/scene.splinecode"></spline-viewer>
+
         </div>
         <div class="header-box">
             <div class="header-container">
