--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <h2>Contact Me Through</h2>
                 <p class="contact-info email">Email: prasadkankhar@gmail.com</p>
                 <p class="contact-info phone">Phone: 9067452648</p>
-                <div class="social-media-container">
+                <div class="social-media-container1">
                     <a href="https://twitter.com/yourhandle" target="_blank" class="social-media-icon twitter">
                         <img src="images/twitter.svg" alt="Twitter">
                     </a>
