Updated project: Added icons in HTML, applied new styles in CSS, and made JavaScript adjustments

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div class="contact-form">
             <div class="form-area">
                 <h2>Contact Me Through</h2>
-                <p class="contact-info email">Email: prasadkankhar@gmail.com</p>
+                <p class="contact-info email">Email: @prasadkankhar</p>
                 <p class="contact-info phone">Phone: 9067452648</p>
                 <div class="social-media-container1">
                     <a href="https://twitter.com/yourhandle" target="_blank" class="social-media-icon twitter">
